5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1578_1332.log
== TEST (2019-03-22 08:03:05) 
-- CODE:
aresta = 5
area = 6*(a**23**1/2)/4
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 6*(a**23**1/2)/4
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:03:40) 
-- CODE:
aresta = 5
area = 6*(a**2*3**1/2)/4
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 6*(a**2*3**1/2)/4
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:04:40) 
-- CODE:
aresta = 5
area = (a**2*3**1/2)/4
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (a**2*3**1/2)/4
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:05:05) 
-- CODE:
aresta = 5
area = (aresta**2*3**1/2)/4
 
print(round(area, 4))
-- OUTPUT:
9.375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:05:10) 
-- CODE:
aresta = 5
area = (aresta**2*3**1/2)/4
 
print(round(area, 4))
-- EXECUTION TIME:
0.162538
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
9.375
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:05:26) 
-- CODE:
aresta = 5
area = 6*(aresta**2*3**1/2)/4
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:05:27) 
-- CODE:
aresta = 5
area = 6*(aresta**2*3**1/2)/4
 
print(round(area, 4))
-- EXECUTION TIME:
0.155289
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:06:37) 
-- CODE:
aresta = 5
area = (6*(aresta**2)*(3**1/2))/4
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:06:39) 
-- CODE:
aresta = 5
area = (6*(aresta**2)*(3**1/2))/4
 
print(round(area, 4))
-- EXECUTION TIME:
0.129182
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:07:12) 
-- CODE:
aresta = 5
area = (6*(aresta**2)*(3**0,5))/4
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (6*(aresta**2)*(3**0,5))/4
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:07:30) 
-- CODE:
aresta = 5
area = (6*(aresta**2)*(3**0.5))/4
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:07:34) 
-- CODE:
aresta = 5
area = (6*(aresta**2)*(3**0.5))/4
 
print(round(area, 4))
-- EXECUTION TIME:
0.173269
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
